Update Scrapping to postgre

--- a/learning/scrap_tab_selenium.ipynb
+++ b/learning/scrap_tab_selenium.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import library \n",
     "from selenium import webdriver\n",
     "import pandas as pd\n",
-    "import sqlalchemy"
+    "from sqlalchemy \n"
    ]
   },
   {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,11 +420,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Into Excel"
+    "# Into Excel\n",
+    "\n",
+    "df_population.to_excel('Population_excel.xlsx', index= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Into Json\n",
+    "\n",
+    "df_population.to_json(\"population_json.json\", orient='records', lines=True, force_ascii= False)"
    ]
   },
   {
@@ -433,16 +446,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Into Json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Into PostgreSql"
+    "# Into PostgreSql\n",
+    "\n",
+    "df_population.to_sql('population',conn, index=False)"
    ]
   }
  ],
